change gif path

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
       </form>
     </div>
     <div id="loader">
-      <img src="loader.gif" width="150px" alt="Loading...">
+      <img src="./loader.gif" width="150px" alt="Loading...">
     </div>
     
   <script>
