--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MindfulSpaces</title>
     <style>
-        /* General Styles */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f9f9fb;
+            background-color: #34495e;
             margin: 0;
             padding: 0;
             display: flex;
             height: 100vh;
-            background-color:#34495e;
         }
 
-        /* Sidebar Styles */
         .sidebar {
             width: 25%;
             background-color: #2c3e50;
@@ -27,228 +24,148 @@
             box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        .sidebar h2 {
-            margin-bottom: 20px;
-            font-size: 1.5rem;
-        }
-
         .chat-history {
             flex-grow: 1;
             overflow-y: auto;
         }
 
-        .chat-history a {
-            display: block;
-            padding: 10px 15px;
-            margin-bottom: 10px;
-            background-color: #34495e;
-            border-radius: 5px;
-            color: white;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .chat-history a:hover {
-            background-color: #1abc9c;
-        }
-
-        .new-chat-btn {
-            padding: 10px;
-            background-color: #1abc9c;
-            color: white;
-            text-align: center;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-        }
-
-        .new-chat-btn:hover {
-            background-color: #16a085;
-        }
-
         #chat-container {
-            background-color:#34495e; /* White background for the chat container */
+            background-color: #34495e;
             padding: 5px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* Softer shadow */
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
             width: 100%;
-            max-width: 1050px; /* Increased width for a more spacious feel */
+            max-width: 1050px;
             display: flex;
             flex-direction: column;
-            height: 720px; /* Make the chat container taller */
+            height: 720px;
         }
 
         h1 {
-            width: 1000px;
-            height: 50px;
             text-align: center;
-            margin-bottom: 10px;
-            margin-top: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
             font-size: 24px;
-            color: white; /* Darker text color */
-            background-color:#34495e ;
-
+            color: white;
+            background-color: #34495e;
         }
 
-          #chat-history {
+        #chat-history {
             flex-grow: 1;
             overflow-y: auto;
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 10px;
-            background-color: #f9f9f9; /* Slightly lighter background inside chat history */
-          }
+            background-color: #f9f9f9;
+        }
 
-          .user-message, .bot-message {
+        .user-message, .bot-message {
             max-width: 75%;
             padding: 10px 15px;
             border-radius: 12px;
             margin: 10px 0;
-            word-wrap: break-word; /* Handle long text properly */
-          }
+            word-wrap: break-word;
+        }
 
         .user-message {
-          background-color: #d1e9ff; /* Light blue for user messages */
-          color: #000000;
-          align-self: flex-end; /* Align user messages to the right */
+            background-color: #d1e9ff;
+            color: #000000;
+            align-self: flex-end;
         }
 
         .bot-message {
-          background-color: #e8e8e8; /* Light grey for bot messages */
-          color: #000000;
-          align-self: flex-start; /* Align bot messages to the left */
+            background-color: #e8e8e8;
+            color: #000000;
+            align-self: flex-start;
         }
 
         form {
-          display: flex;
-          border-top: 1px solid #ddd;
-          padding-top: 10px;
-          margin-top: 10px;
+            display: flex;
+            border-top: 1px solid #ddd;
+            padding-top: 10px;
+            margin-top: 10px;
         }
 
         input {
-          flex-grow: 1;
-          padding: 12px;
-          border: 1px solid #ccc;
-          border-radius: 8px;
-          font-size: 14px;
-          background-color: #ffffff; /* White input background */
-          outline: none;
-          box-shadow: none;
-        }
-
-        input:focus {
-          border-color: #2b6cb0; /* Light blue focus border */
+            flex-grow: 1;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 14px;
+            background-color: #ffffff;
         }
 
         button {
-          background-color: #1abc9c; /* ChatGPT-like button */
-          color: white;
-          border: none;
-          padding: 12px 18px;
-          border-radius: 8px;
-          cursor: pointer;
-          font-size: 14px;
-          margin-left: 10px;
-        }
-
-        button:hover {
-          background-color: #16a085; /* Darker blue on hover */
+            background-color: #1abc9c;
+            color: white;
+            border: none;
+            padding: 12px 18px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-left: 10px;
         }
 
         #loader {
-          display: none;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
-
-        #chat-history::-webkit-scrollbar {
-          width: 8px;
-        }
-
-        #chat-history::-webkit-scrollbar-thumb {
-          background-color: #cccccc;
-          border-radius: 4px;
-        }
-
     </style>
 </head>
 <body>
     <div class="sidebar">
         <h2>Chat History</h2>
-        <div class="chat-history">
-            <div class="chat-history">
-            </div>
-            <a href="#">Chat 1</a>
-            <a href="#">Chat 2</a>
-            <a href="#">Chat 3</a>
-            <!-- Add more history here -->
-        </div>
-        <a href="#" class="new-chat-btn" id="new-chat-btn">New Chat</a>
+        <div class="chat-history"></div>
     </div>
 
     <div id="chat-container">
-      <h1> Welcome to MindfulSpaces ^.^</h1>
-      <div id="chat-history"></div>
-      <form id="chat-form">
-        <input type="text" id="user-input" placeholder="Enter your message">
-        <button type="submit">Send</button>
-      </form>
+        <h1> Welcome to MindfulSpaces ^.^</h1>
+        <div id="chat-history"></div>
+        <form id="chat-form">
+            <input type="text" id="user-input" placeholder="Enter your message" required>
+            <button type="submit">Send</button>
+        </form>
     </div>
     <div id="loader">
-      <img src="/loader.gif" width="150px" alt="Loading...">
+        <img src="/loader.gif" width="150px" alt="Loading...">
     </div>
-    
-  <script>
-    const chatHistory = document.getElementById('chat-history');
-    const userInput = document.getElementById('user-input');
-    const form = document.getElementById('chat-form');
-    const newChatBtn = document.getElementById('new-chat-btn');
 
-    async function sendMessage() {
-      const userMessage = userInput.value;
-      userInput.value = ''; 
-      console.log(userMessage)
-      try {
-        const response = await fetch('/chat', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ userInput: userMessage }),
+    <script>
+        const chatHistory = document.getElementById('chat-history');
+        const userInput = document.getElementById('user-input');
+        const form = document.getElementById('chat-form');
+
+        async function sendMessage() {
+            const userMessage = userInput.value;
+            userInput.value = ''; 
+            try {
+                const response = await fetch('/chat', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ userInput: userMessage }),
+                });
+
+                const data = await response.json();
+                const botMessage = data.response;
+
+                // Add chat message to the chat history
+                chatHistory.innerHTML += `<div class="user-message">${userMessage}</div>`;
+                chatHistory.innerHTML += `<div class="bot-message">${botMessage}</div>`;
+                chatHistory.scrollTop = chatHistory.scrollHeight; // Scroll to the bottom
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        }
+
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+            const loader = document.getElementById('loader');
+            loader.style.display = 'block'; // Show the loader
+            sendMessage().finally(() => {
+                loader.style.display = 'none'; // Hide the loader after the message is sent
+            });
         });
-
-        const data = await response.json();
-        console.log(data)
-        const botMessage = data.response;
-        console.log(botMessage)
-        // Add chat message to the chat history
-        chatHistory.innerHTML += `<div class="user-message">${userMessage}</div>`;
-        chatHistory.innerHTML += `<div class="bot-message">${botMessage}</div>`;
-
-        // Scroll to the bottom of the chat history
-        chatHistory.scrollTop = chatHistory.scrollHeight;
-      } catch (error) {
-        console.error('Error:', error);
-        // Handle errors gracefully, e.g., display an error message to the user
-      }
-    }
-
-    form.addEventListener('submit', (event) => {
-      event.preventDefault(); // Prevent form submission
-      const loader = document.getElementById('loader');
-      loader.style.display = 'block'; // Show the loader
-      sendMessage().finally(() => {
-      loader.style.display = 'none'; // Hide the loader after the message is sent
-    });;
-  });
-    newChatBtn.addEventListener('click', (event) => {
-            event.preventDefault(); // Prevent default link behavior
-            window.location.reload(); // Reload the page
-        });
-   
-  </script>
+    </script>
 </body>
 </html>
