--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <title>MindfulSpaces</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #34495e;
@@ -12,57 +17,124 @@
             padding: 0;
             display: flex;
             height: 100vh;
+            overflow: hidden;
+            position: relative;
         }
 
         .sidebar {
-            width: 25%;
+            width: 300px;
             background-color: #2c3e50;
             color: #fff;
             display: flex;
             flex-direction: column;
             padding: 20px;
             box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+            position: absolute;
+            left: -300px; 
+            height: 100%;
+            z-index: 10;
+        }
+
+        .sidebar.active {
+            transform: translateX(300px); 
+        }
+
+        .hamburger {
+            cursor: pointer;
+            padding: 10px;
+            background-color: #1abc9c;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 11; 
+            height: 45px;
         }
 
         .chat-history {
             flex-grow: 1;
             overflow-y: auto;
+            font-size: 20px;
+        }
+
+        .chat-history a {
+            display: block;
+            padding: 10px 15px;
+            margin-bottom: 10px;
+            background-color: #34495e;
+            border-radius: 5px;
+            color: white;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .chat-history a:hover {
+            background-color: #1abc9c;
+        }
+
+        .new-chat-btn {
+            font-weight: bold;
+            font-size: 20px;
+            padding: 10px;
+            background-color: #1abc9c;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .new-chat-btn:hover {
+            background-color: #16a085;
         }
 
         #chat-container {
+          margin-left: 1000px;
             background-color: #34495e;
             padding: 5px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-            width: 100%;
-            max-width: 1050px;
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
-            height: 720px;
+            height: 100%;
+            margin-left: 0; 
+            transition: margin-left 0.3s; 
         }
 
         h1 {
             text-align: center;
             margin: 0;
-            font-size: 24px;
+            font-size: 30px;
             color: white;
             background-color: #34495e;
         }
 
         #chat-history {
+            margin-top: 10px;
+            margin-left: 310px;
+            margin-right: 10px;
+            margin-bottom: 10px;
             flex-grow: 1;
             overflow-y: auto;
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 10px;
             background-color: #f9f9f9;
+            display: flex; /* Make it a flex container */
+            flex-direction: column; /* Arrange items in a column */
+            align-items: flex-start;
         }
 
         .user-message, .bot-message {
-            max-width: 75%;
+            max-width:75%;
             padding: 10px 15px;
             border-radius: 12px;
             margin: 10px 0;
             word-wrap: break-word;
+            font-size: x-large;
         }
 
         .user-message {
@@ -72,14 +144,13 @@
         }
 
         .bot-message {
-            background-color: #e8e8e8;
+            background-color: #c3fae4;
             color: #000000;
             align-self: flex-start;
         }
 
         form {
             display: flex;
-            border-top: 1px solid #ddd;
             padding-top: 10px;
             margin-top: 10px;
         }
@@ -89,10 +160,15 @@
             padding: 12px;
             border: 1px solid #ccc;
             border-radius: 8px;
-            font-size: 14px;
+            font-size: 20px;
             background-color: #ffffff;
+            margin-left: 310px;
+            margin-top: -15px;
+            margin-bottom: 5px;
         }
-
+        input::placeholder{
+          font-size: large;
+        }
         button {
             background-color: #1abc9c;
             color: white;
@@ -100,8 +176,11 @@
             padding: 12px 18px;
             border-radius: 8px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 20px;
             margin-left: 10px;
+            margin-bottom: 5px;
+            margin-right: 10px;
+            margin-top: -15px;
         }
 
         #loader {
@@ -111,19 +190,90 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
+
+        .image-sidebar {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 300px; /* Adjust as needed */
+            height: 100%;
+            overflow-y: auto; /* Allows scrolling if needed */
+            padding: 10px;
+        }
+
+        .image-sidebar::-webkit-scrollbar {
+        width: 0; /* Remove scrollbar space */
+        background: transparent; /* Optional: set a background for scrollbar area */
+        }
+
+          /* Hide scrollbar for IE, Edge, and Firefox */
+        .image-sidebar {
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+        }
+
+        .image-sidebar img {
+            width: 100%; /* Responsive width */
+            margin-bottom: 10px; /* Space between images */
+            border-radius: 8px; /* Rounded corners */
+        }
+        
+        @media (max-width: 768px) {
+            .sidebar {
+                position: fixed;
+            }
+
+            #chat-container.active {
+                margin-left: 300px; 
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 20px;
+            }
+
+            button, input {
+                font-size: 12px;
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
         <h2>Chat History</h2>
-        <div class="chat-history"></div>
+        <div class="chat-history">
+            <a href="#">Chat 1</a>
+            <a href="#">Chat 2</a>
+            <a href="#">Chat 3</a>
+        </div>
+        <a href="#" class="new-chat-btn" id="new-chat-btn">New Chat</a>
     </div>
+    <div class="image-sidebar">
+      <img src="/img1.png" alt="Image 1">
+      <img src="/img2.jpg" alt="Image 2">
+      <img src="/img3.jpg" alt="Image 3">
+      <img src="/img4.jpg" alt="Image 4">
+      <img src="/img5.png" alt="Image 5">
+      <img src="/img6.jpg" alt="Image 6">
+      <img src="/img7.jpg" alt="Image 7">
+      <img src="/img8.png" alt="Image 8">
+      <img src="/img9.jpg" alt="Image 9">
+      <img src="/img10.jpg" alt="Image 10">
+      <img src="/img11.jpg" alt="Image 11">
+      <img src="/img12.jpg" alt="Image 12">
+      <img src="/img13.jpg" alt="Image 13">
+      <img src="/img14.jpg" alt="Image 14">
+      <img src="/img15.jpg" alt="Image 15">
+  </div>
 
     <div id="chat-container">
-        <h1> Welcome to MindfulSpaces ^.^</h1>
+        <button class="hamburger" id="hamburger">☰</button>
+        <h1>Welcome to MindfulSpaces ^.^</h1>
         <div id="chat-history"></div>
         <form id="chat-form">
-            <input type="text" id="user-input" placeholder="Enter your message" required>
+            <input type="text" id="user-input" placeholder="🤖 Enter your message" required>
             <button type="submit">Send</button>
         </form>
     </div>
@@ -135,6 +285,10 @@
         const chatHistory = document.getElementById('chat-history');
         const userInput = document.getElementById('user-input');
         const form = document.getElementById('chat-form');
+        const newChatBtn = document.getElementById('new-chat-btn');
+        const sidebar = document.getElementById('sidebar');
+        const chatContainer = document.getElementById('chat-container');
+        const hamburger = document.getElementById('hamburger');
 
         async function sendMessage() {
             const userMessage = userInput.value;
@@ -150,9 +304,9 @@
                 const botMessage = data.response;
 
                 // Add chat message to the chat history
-                chatHistory.innerHTML += `<div class="user-message">${userMessage}</div>`;
-                chatHistory.innerHTML += `<div class="bot-message">${botMessage}</div>`;
-                chatHistory.scrollTop = chatHistory.scrollHeight; // Scroll to the bottom
+                chatHistory.innerHTML += `<div class="user-message">🧑‍🎓: ${userMessage}</div>`;
+                chatHistory.innerHTML += `<div class="bot-message">🤖: ${botMessage}</div>`;
+                chatHistory.scrollTop = chatHistory.scrollHeight; 
             } catch (error) {
                 console.error('Error:', error);
             }
@@ -161,10 +315,20 @@
         form.addEventListener('submit', (event) => {
             event.preventDefault();
             const loader = document.getElementById('loader');
-            loader.style.display = 'block'; // Show the loader
+            loader.style.display = 'block'; 
             sendMessage().finally(() => {
-                loader.style.display = 'none'; // Hide the loader after the message is sent
+                loader.style.display = 'none'; 
             });
+        });
+
+        newChatBtn.addEventListener('click', (event) => {
+            event.preventDefault(); 
+            window.location.reload(); 
+        });
+
+        hamburger.addEventListener('click', () => {
+            sidebar.classList.toggle('active'); 
+            chatContainer.classList.toggle('active'); 
         });
     </script>
 </body>
