--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
         }
 
         h1 {
-            text-align: center;
+            left: 500px;
             margin: 0;
             font-size: 30px;
             color: white;
